--- a/index.html
+++ b/index.html
@@ -1,27 +1,96 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>FENADI SETIAWAN</title>
+	<title>Full Web HTML</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="https://kit.fontawesome.com/a54dffedbb.js"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-	<nav>
-		<div class="logo-nav">
-			<h1><a href="#">VEND</a></h1>
-		</div>
-
-		<div class="menu-bar">
-			<a href="#">Home</a>
-			<a href="#">Project</a>
-			<a href="#">Resume</a>
+	<header>
+		<h1>FEN.id <span>Gadget</span></h1>
+		<input type="text" placeholder="Search">
+		<button>Search</button>
+		<div class="nav_bar">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Blogs</a></li>
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Service</a></li>
+			</ul>
 		</div>
 	</nav>
+	</header>
 
 	<main>
-		<div class="hello">
-			<h1>Hello.</h1>
+		<div class="wrapper">
+			<article>
+				<h2>Review Smartphone</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</article>
+
+			<article>
+				<h2>OPPO Rilis Seri Terbaru 2020</h2>	
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+				<section>
+					<h3>OPPO A53</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+
+				</section>
+				
+				<section>
+					<h3>OPPO RENO 4 PRO</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+				</section>
+			</article>
 		</div>
+
+		<aside>
+			<a href="" title=""></a>
+			<a href="" title=""></a>
+			<a href="" title=""></a>
+			<a href="" title=""></a>
+		</aside>
+
 	</main>
+
+	<footer>
+		<p>Copyright © 2020 FEN.id Company., Ltd. All rights reserved.</p>
+		<div class="social_media">
+			<a href="#"><i class="fab fa-facebook-f"></i></a>
+			<a href="#"><i class="fab fa-twitter"></i></a>
+			<a href="#"><i class="fab fa-instagram"></i></a>
+		</div>
+	</footer>	
 
 </body>
 </html>
